--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,5 +3,12 @@
 } */
 
 input {
-    height: 50px
+    height: 50px;
+}
+
+#weekday-item {
+    height: 350px;
+    width: 150px;
+    padding-left: 15px;
+    margin-bottom: 15px;
 }
