--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,16 @@
 header {
+    margin: 30px 30px 0 30px;
     height: 100px;
     padding-top: 25px;
+    border-radius: 15px;
 }
 
 input {
     height: 50px;
+}
+
+.current-city {
+    border-radius: 15px;
 }
 
 #weekday-item {
